--- a/soohyeok_soojee/visualization/templates/map.html
+++ b/soohyeok_soojee/visualization/templates/map.html
@@ -39,8 +39,7 @@
                   attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
                   maxZoom: 18,
                   id: 'mapbox.streets',
-                  accessToken: 'pk.eyJ1Ijoia3N1emllIiwiYSI6ImNqdjRtbXBsMjB5eGEzeWw4aTYxNGtpdWcifQ.T5A6DDkvZB1nf0VxYcpaxg'
-                  // accessToken: 'your.mapbox.access.token'
+                  accessToken: 'your.mapbox.access.token'
               }).addTo(map);
               map.createPane('districtPane');
 
